--- a/requirements.txt
+++ b/requirements.txt
@@ -52,3 +52,144 @@ tifffile==2021.11.2
 torch==1.10.0
 torchvision==0.11.1
 typing-extensions==3.10.0.2
+absl-py==1.0.0
+aiohttp==3.8.1
+aiosignal==1.2.0
+albumentations==1.1.0
+async-timeout==4.0.2
+attrs==21.4.0
+cachetools==5.0.0
+certifi==2021.10.8
+charset-normalizer==2.0.12
+cycler==0.11.0
+frozenlist==1.3.0
+fsspec==2022.1.0
+future==0.18.2
+google-auth==2.6.0
+google-auth-oauthlib==0.4.6
+grpcio==1.44.0
+idna==3.3
+imageio==2.11.1
+importlib-metadata==4.11.1
+joblib==1.1.0
+kiwisolver==1.3.2
+Markdown==3.3.6
+matplotlib==3.4.3
+multidict==6.0.2
+networkx==2.6.3
+numpy==1.21.3
+oauthlib==3.2.0
+opencv-python==4.5.4.58
+opencv-python-headless==4.5.4.58
+packaging==21.3
+pandas==1.3.4
+Pillow==8.4.0
+protobuf==3.19.4
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyDeprecate==0.3.1
+pyparsing==3.0.4
+python-dateutil==2.8.2
+pytorch-lightning==1.5.10
+pytz==2021.3
+PyWavelets==1.2.0
+PyYAML==6.0
+qudida==0.0.4
+requests==2.27.1
+requests-oauthlib==1.3.1
+rsa==4.8
+scikit-image==0.18.3
+scikit-learn==1.0.1
+scipy==1.7.2
+six==1.16.0
+tensorboard==2.8.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+threadpoolctl==3.0.0
+tifffile==2021.11.2
+torch==1.10.0
+torchmetrics==0.7.2
+torchvision==0.11.1
+tqdm==4.62.3
+typing-extensions==3.10.0.2
+urllib3==1.26.8
+Werkzeug==2.0.3
+yarl==1.7.2
+zipp==3.7.0
+absl-py==1.0.0
+aiohttp==3.8.1
+aiosignal==1.2.0
+albumentations==1.1.0
+async-timeout==4.0.2
+attrs==21.4.0
+cachetools==5.0.0
+certifi==2021.10.8
+charset-normalizer==2.0.12
+comet-ml==3.26.1
+configobj==5.0.6
+cycler==0.11.0
+dulwich==0.20.32
+everett==3.0.0
+frozenlist==1.3.0
+fsspec==2022.1.0
+future==0.18.2
+google-auth==2.6.0
+google-auth-oauthlib==0.4.6
+grpcio==1.44.0
+idna==3.3
+imageio==2.11.1
+importlib-metadata==4.11.1
+importlib-resources==5.4.0
+joblib==1.1.0
+jsonschema==4.4.0
+kiwisolver==1.3.2
+Markdown==3.3.6
+matplotlib==3.4.3
+multidict==6.0.2
+networkx==2.6.3
+numpy==1.21.3
+nvidia-ml-py3==7.352.0
+oauthlib==3.2.0
+opencv-python==4.5.4.58
+opencv-python-headless==4.5.4.58
+packaging==21.3
+pandas==1.3.4
+Pillow==8.4.0
+protobuf==3.19.4
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyDeprecate==0.3.1
+pyparsing==3.0.4
+pyrsistent==0.18.1
+python-dateutil==2.8.2
+pytorch-lightning==1.5.10
+pytz==2021.3
+PyWavelets==1.2.0
+PyYAML==6.0
+qudida==0.0.4
+requests==2.27.1
+requests-oauthlib==1.3.1
+requests-toolbelt==0.9.1
+rsa==4.8
+scikit-image==0.18.3
+scikit-learn==1.0.1
+scipy==1.7.2
+semantic-version==2.9.0
+six==1.16.0
+tensorboard==2.8.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+threadpoolctl==3.0.0
+tifffile==2021.11.2
+torch==1.10.0
+torchmetrics==0.7.2
+torchvision==0.11.1
+tqdm==4.62.3
+typing-extensions==3.10.0.2
+urllib3==1.26.8
+websocket-client==1.2.3
+Werkzeug==2.0.3
+wrapt==1.13.3
+wurlitzer==3.0.2
+yarl==1.7.2
+zipp==3.7.0
